--- a/src/shared-components/Header/style.css
+++ b/src/shared-components/Header/style.css
@@ -1,73 +1,2 @@
-#main-header {
-    position: fixed;
-    z-index: 99999;
-    top: 0;
-    width: 100%;
-    background-color: #fff;
-    -webkit-box-shadow: 0 1px 0 rgba(0,0,0,.1);
-    -moz-box-shadow: 0 1px 0 rgba(0,0,0,.1);
-    box-shadow: 0 1px 0 rgba(0,0,0,.1);
-    font-weight: 500;
-    line-height: 23px;
-}
-
-#main-header .container {
-    position: relative;
-    width: 80%;
-    max-width: 1080px;
-    margin: auto;
-    display: flex;
-    height: 100px;
-    justify-content: space-between;
-    align-items: center;
-}
-.logo_container {
-    display: inline-block;
-}
-#logo {
-    display: inline-block;
-    float: none;
-    max-height: 54%;
-    height: 60px;
-    margin-bottom: 0;
-    vertical-align: middle;
-    -webkit-transition: all .4s ease-in-out;
-    -moz-transition: all .4s ease-in-out;
-    transition: all .4s ease-in-out;
-    -webkit-transform: translate3d(0,0,0);
-}
-#et-top-navigation {
-   
-}
-#top-menu li {
-    display: inline-block;
-    padding-right: 22px;
-    font-size: 14px;
-}
-#top-menu a {
-    display: block;
-    position: relative;
-    color: rgba(0,0,0,.6);
-    text-decoration: none;
-    -webkit-transition: all .4s ease-in-out;
-    -moz-transition: all .4s ease-in-out;
-    transition: all .4s ease-in-out;
-}
-.nav li ul {
-    visibility: hidden;
-    z-index: 9999;
-    width: 240px;
-    border-top: 3px solid #2ea3f2;
-    opacity: 0;
-    background: #fff;
-    -webkit-box-shadow: 0 2px 5px rgba(0,0,0,.1);
-    -moz-box-shadow: 0 2px 5px rgba(0,0,0,.1);
-    box-shadow: 0 2px 5px rgba(0,0,0,.1);
-    position: absolute;
-    padding: 20px 0;
-}
-
-.nav li.et-touch-hover>ul, .nav li:hover>ul {
-    visibility: visible;
-    opacity: 1;
-}
+#root #main-header{position:fixed;z-index:99999;top:0;width:100%;background-color:#fff;box-shadow:0 1px 0 rgba(0,0,0,0.1);font-weight:500;line-height:23px}#root #main-header .container{position:relative;width:80%;max-width:1080px;margin:auto;display:flex;height:110px;justify-content:space-between;align-items:center;padding:0;transition:0.4s ease-in-out}#root #main-header .container .logo_container{display:inline-block;height:54%}#root #main-header .container .logo_container #logo{display:inline-block;height:100%;float:none;margin-bottom:0;vertical-align:middle;transition:all 0.4s ease-in-out;-webkit-transform:translate3d(0, 0, 0)}#root #main-header .container #top-menu li{display:inline-block;padding-right:22px;font-size:14px}#root #main-header .container #top-menu li a{display:block;position:relative;color:rgba(0,0,0,0.6);text-decoration:none;transition:all 0.4s ease-in-out}#root #main-header .container .nav li ul{visibility:hidden;z-index:9999;width:240px;border-top:3px solid #2ea3f2;opacity:0;background:#fff;box-shadow:0 2px 5px rgba(0,0,0,0.1);position:absolute;padding:20px 0}#root #main-header .container .nav li.et-touch-hover>ul,#root #main-header .container .nav li:hover>ul{visibility:visible;opacity:1}#root .fixedH #main-header .container{height:54px;transition:0.4s ease-in-out}
+/*# sourceMappingURL=style.css.map */
