--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,3 @@
-@import "config/vars.css";
-  
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,8 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-    color:var(--mainText);
-    background-color: var(--mainBacground);
+  /* color:var(--mainText);
+    background-color: var(--mainBacground); */
 }
 
 code {
@@ -16,3 +14,17 @@ code {
     monospace;
 }
 
+.centerContent {
+  max-width: 1080px;
+  width: 80%;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.addShadow {
+  background-color: rgba(0, 0, 0, 0.28);
+}
+
+.center {
+  text-align: center;
+}
