--- a/src/components/ManPower/style.scss
+++ b/src/components/ManPower/style.scss
@@ -37,19 +37,19 @@
           display: block;
         }
         .testimonial {
-          background-color: #ec6421;
+          background-color: var(--mainActiveBacground);
           padding: 30px;
           h3 {
-            color: #fff;
+            color: var(--mainActiveText);
             font-size: 22px;
           }
           p {
-            color: #fff;
+            color: var(--mainActiveText);
           }
         }
         h3 {
           font-size: 20px;
-          color: #ec6421;
+          color: var(--mainActiveBacground);
         }
         &__col1 {
           width: 20.875%;
