--- a/src/components/ManPower/style.scss
+++ b/src/components/ManPower/style.scss
@@ -39,6 +39,31 @@
         .testimonial {
           background-color: var(--mainActiveBacground);
           padding: 30px;
+          position: relative;
+          &:after {
+            position: absolute;
+            z-index: 2;
+            top: -16px;
+            left: 50%;
+            margin-left: -16px;
+            -webkit-border-radius: 31px;
+            -moz-border-radius: 31px;
+            border-radius: 31px;
+            background: #f5f5f5;
+            font-size: 32px;
+            content: "\7c";
+            text-shadow: 0 0;
+            font-family: ETmodules !important;
+            font-weight: 400;
+            font-style: normal;
+            font-variant: normal;
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
+            line-height: 1;
+            text-transform: none;
+            speak: none;
+            color: var(--mainActiveBacground);
+          }
           h3 {
             color: var(--mainActiveText);
             font-size: 22px;
