--- a/src/config/vars.css
+++ b/src/config/vars.css
@@ -17,7 +17,7 @@ html:root {
 
     --mainActiveText: #fff;
     /* --mainActiveBacground: #ec6421; */
-    --mainActiveBacground: red;
+    --mainActiveBacground: #BB1515;
 
     --secondText: #212529;
     --secondBacground: #f6f6f6;
