--- a/src/shared-components/Header/style.scss
+++ b/src/shared-components/Header/style.scss
@@ -16,7 +16,7 @@
       max-width: 1080px;
       margin: auto;
       display: flex;
-      height: 110px;
+      height: 95px;
       justify-content: space-between;
       align-items: center;
       padding: 0;
@@ -25,10 +25,11 @@
       transition: 0.4s ease-in-out;
       .logo_container {
         display: inline-block;
-        height: 54%;
+        height: 72%;
         #logo {
           display: inline-block;
           height: 100%;
+          width: auto;
           float: none;
           margin-bottom: 0;
           vertical-align: middle;
