--- a/src/components/Home/style.scss
+++ b/src/components/Home/style.scss
@@ -92,6 +92,9 @@
 
 .all_services {
   width: 100%;
+  display: flex;
+    justify-content: center;
+    align-items: flex-start;
 }
 
 .single_service {
@@ -105,11 +108,25 @@
   .single_service_image {
     display: inline-block;
     max-width: 100%;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
     line-height: 0;
   }
   .single_service_container {
     text-align: center;
+    > a {
+      display: block;
+      font-weight: 700;
+      text-transform: uppercase;
+    }
+    ul {
+      padding-inline-start: 0;
+      font-size: 12px;
+    float: left;
+    text-align: left;
+      li {
+        list-style: none;
+      }
+    }
     a {
       font-family: "Roboto", Helvetica, Arial, Lucida, sans-serif;
       font-size: 15px;
