--- a/src/components/Home/style.scss
+++ b/src/components/Home/style.scss
@@ -260,3 +260,30 @@
   width: 100%;
   margin: 0 auto;
 }
+
+
+.tsparticles-canvas-el:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(51, 49, 58, 0.8);
+  /* background: rgba(51, 49, 58, 0.8); */
+}
+
+.tsparticles-canvas-el {
+  box-shadow: inset 0 0 0 1000px #0a0a0a8f;
+}
+.services {
+  position: absolute;
+  bottom: 10%;
+  left: 0;
+  >div {
+    background-color: #ffffff14;
+    color: #fff;
+    padding: 5px;
+    display: inline-block;
+  }
+}
