--- a/src/shared-components/Header/style.css
+++ b/src/shared-components/Header/style.css
@@ -52,10 +52,32 @@
   padding-top: 40px;
 }
 
+#root #main-header .container #top-menu > li a:after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+  right: 0;
+  height: 3px;
+  background-color: var(--mainActiveBacground);
+  pointer-events: none;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  width: 0;
+  bottom: -3px;
+}
+
+#root #main-header .container #top-menu > li:hover > a::after {
+  background-color: var(--mainActiveBacground);
+  width: 100%;
+}
+
 #root #main-header .container #top-menu li {
   display: inline-block;
   padding-right: 22px;
-  font-size: 14px;
+  font-size: 16px;
 }
 
 #root #main-header .container #top-menu li a {
