--- a/src/components/Design/style.scss
+++ b/src/components/Design/style.scss
@@ -5,7 +5,7 @@
       .header-content {
         padding: 5px 0px;
       }
-      background-image: url(https://www.mechanical3dmodelling.com/wp-content/themes/m3dm/images/header.jpg);
+      background-image: url(http://www.lpmarinett.com/images/industrial-supplies-banner.jpg);
       background-position: center;
       -webkit-background-size: 100%;
       -webkit-background-size: cover;
