--- a/src/components/Welding/style.scss
+++ b/src/components/Welding/style.scss
@@ -5,7 +5,8 @@
       .header-content {
         padding: 5px 0px;
       }
-      background-image: url(https://intersica.com/wp-content/uploads/2019/07/inspector-phone-1.jpg);
+      background-image: url(https://saundersint.com/wp-content/uploads/2017/11/ED-1.jpg);
+
       background-position: center;
       -webkit-background-size: 100%;
       -webkit-background-size: cover;
