--- a/src/components/Design/style.css
+++ b/src/components/Design/style.css
@@ -3,7 +3,7 @@
 }
 
 .mainC .main-content__top {
-  background-image: url(https://www.mechanical3dmodelling.com/wp-content/themes/m3dm/images/header.jpg);
+  background-image: url(http://www.lpmarinett.com/images/industrial-supplies-banner.jpg);
   background-position: center;
   background-size: 100%;
   background-size: cover;
