--- a/src/components/Welding/style.css
+++ b/src/components/Welding/style.css
@@ -3,7 +3,7 @@
 }
 
 .mainC .main-content__top {
-  background-image: url(https://intersica.com/wp-content/uploads/2019/07/inspector-phone-1.jpg);
+  background-image: url(https://saundersint.com/wp-content/uploads/2017/11/ED-1.jpg);
   background-position: center;
   background-size: 100%;
   background-size: cover;
