--- a/src/components/Design/style.css
+++ b/src/components/Design/style.css
@@ -3,7 +3,7 @@
 }
 
 .mainC .main-content__top {
-  background-image: url(http://www.lpmarinett.com/images/industrial-supplies-banner.jpg);
+  background-image: url(https://image.freepik.com/free-vector/3d-style-gears-symbols-black-design_1017-25662.jpg);
   background-position: center;
   background-size: 100%;
   background-size: cover;
