--- a/src/components/Design/style.scss
+++ b/src/components/Design/style.scss
@@ -5,7 +5,7 @@
       .header-content {
         padding: 5px 0px;
       }
-      background-image: url(http://www.lpmarinett.com/images/industrial-supplies-banner.jpg);
+      background-image: url(https://image.freepik.com/free-vector/3d-style-gears-symbols-black-design_1017-25662.jpg);
       background-position: center;
       -webkit-background-size: 100%;
       -webkit-background-size: cover;
