--- a/src/components/Design/style.css
+++ b/src/components/Design/style.css
@@ -3,7 +3,7 @@
 }
 
 .mainC .main-content__top {
-  background-image: url(https://image.freepik.com/free-vector/3d-style-gears-symbols-black-design_1017-25662.jpg);
+  background-image: url(https://image.freepik.com/free-photo/technical-drawings-hand-with-pencil_19485-52474.jpg);
   background-position: center;
   background-size: 100%;
   background-size: cover;
@@ -38,6 +38,10 @@
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+}
+
+.mainC .main-content .description__row:nth-child(3) {
+  padding-top: 25px;
 }
 
 .mainC .main-content .description__row p {
@@ -105,6 +109,8 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-shadow: 0px 20px 70px 0px #262a4c26;
+          box-shadow: 0px 20px 70px 0px #262a4c26;
   border-radius: 8px;
   margin-bottom: 5.5%;
   background-color: #f6f6f6;
@@ -130,5 +136,27 @@
 
 .fixedH .main-content {
   margin-top: 0;
+}
+
+.main-content.quality.design {
+  position: relative;
+}
+
+.main-content.quality.design .addShadow {
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+.main-content.quality.design:after {
+  content: "";
+  background-image: url(https://image.freepik.com/free-vector/abstract-gear-wheel-mechanism-background_41981-300.jpg);
+  background-position: center bottom;
+  position: fixed;
+  bottom: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity: 0.15;
 }
 /*# sourceMappingURL=style.css.map */
