--- a/src/components/ManPower/style.scss
+++ b/src/components/ManPower/style.scss
@@ -1,3 +1,115 @@
+// .mainC {
+//   .main-content {
+//     margin-top: 97px;
+//     &__top {
+//       .header-content {
+//         padding: 5px 0px;
+//       }
+//       background-image: url(https://intersica.com/wp-content/uploads/2019/07/inspector-phone-1.jpg);
+//       background-position: center;
+//       -webkit-background-size: 100%;
+//       -webkit-background-size: cover;
+//       -moz-background-size: 100%;
+//       -moz-background-size: cover;
+//       background-size: 100%;
+//       background-size: cover;
+//       &__title {
+//         padding: 50px 0;
+//         font-weight: 700;
+//         font-size: 25px;
+//         color: var(--mainActiveText);
+//         .description {
+//           font-size: 14px;
+//           padding-bottom: 10px !important;
+//           padding-top: 5px !important;
+//           font-weight: 500;
+//         }
+//       }
+//     }
+//     .description {
+//       padding: 54px 0;
+//       &__row {
+//         padding: 27px 0;
+
+//         p {
+//           line-height: 1.7em;
+//           font-size: 13px;
+//           display: block;
+//         }
+//         .testimonial {
+//           background-color: var(--mainActiveBacground);
+//           padding: 30px;
+//           position: relative;
+//           &:after {
+//             position: absolute;
+//             z-index: 2;
+//             top: -16px;
+//             left: 50%;
+//             margin-left: -16px;
+//             -webkit-border-radius: 31px;
+//             -moz-border-radius: 31px;
+//             border-radius: 31px;
+//             background: #f5f5f5;
+//             font-size: 32px;
+//             content: "\7c";
+//             text-shadow: 0 0;
+//             font-family: ETmodules !important;
+//             font-weight: 400;
+//             font-style: normal;
+//             font-variant: normal;
+//             -webkit-font-smoothing: antialiased;
+//             -moz-osx-font-smoothing: grayscale;
+//             line-height: 1;
+//             text-transform: none;
+//             speak: none;
+//             color: var(--mainActiveBacground);
+//           }
+//           h3 {
+//             color: var(--mainActiveText);
+//             font-size: 22px;
+//           }
+//           p {
+//             color: var(--mainActiveText);
+//           }
+//         }
+//         h3 {
+//           font-size: 20px;
+//           color: var(--mainActiveBacground);
+//         }
+//         &__col1 {
+//           width: 20.875%;
+//           margin-right: 5.5%;
+//         }
+//         &__col2 {
+//           &.noH3 {
+//             padding-top: 10px;
+//           }
+//           width: 73.625%;
+//           :last-child {
+//             margin-right: 0;
+//           }
+//           img {
+//             width: 100%;
+//           }
+//         }
+//         .text-center {
+//           line-height: 1.7em;
+//         }
+//       }
+//     }
+//   }
+// }
+// .fixedH {
+//   .main-content {
+//     margin-top: 0;
+//   }
+// }
+// .flex {
+//   display: flex;
+// }
+
+
+
 .mainC {
   .main-content {
     margin-top: 97px;
@@ -5,7 +117,7 @@
       .header-content {
         padding: 5px 0px;
       }
-      background-image: url(https://intersica.com/wp-content/uploads/2019/07/inspector-phone-1.jpg);
+      background-image: url(https://www.evaluationz.com/wp-content/uploads/2013/01/services-banner.jpg);
       background-position: center;
       -webkit-background-size: 100%;
       -webkit-background-size: cover;
@@ -27,19 +139,24 @@
       }
     }
     .description {
-      padding: 54px 0;
+      padding: 15px 0;
       &__row {
-        padding: 27px 0;
+        padding: 15px 0;
+        display: flex;
+        flex-wrap: wrap;
+        &:nth-child(3){
+          padding-top: 25px;
+        }
 
         p {
-          line-height: 1.7em;
           font-size: 13px;
-          display: block;
+          padding: 0px 10px;
         }
         .testimonial {
           background-color: var(--mainActiveBacground);
           padding: 30px;
           position: relative;
+          width: 100%;
           &:after {
             position: absolute;
             z-index: 2;
@@ -73,23 +190,32 @@
           }
         }
         h3 {
-          font-size: 20px;
+          font-size: 16px;
+          margin-bottom: 0;
+          text-align: center;
+          padding: 15px 10px;
           color: var(--mainActiveBacground);
         }
         &__col1 {
-          width: 20.875%;
           margin-right: 5.5%;
-        }
-        &__col2 {
-          &.noH3 {
-            padding-top: 10px;
+          min-width: 29.6%;
+          width: min-content;
+          display: flex;
+          flex-direction: column;
+          box-shadow: 0px 20px 70px 0px #262a4c26;
+          border-radius: 8px;
+          margin-bottom: 5.5%;
+          background-color: #f6f6f6;
+          &:nth-child(3) {
+            margin-right: 0;
           }
-          width: 73.625%;
           :last-child {
             margin-right: 0;
           }
           img {
             width: 100%;
+            border-top-left-radius: 8px;
+            border-top-right-radius: 8px;
           }
         }
         .text-center {
@@ -104,6 +230,24 @@
     margin-top: 0;
   }
 }
-.flex {
-  display: flex;
+
+.main-content.quality.design {
+  position: relative;
+  .addShadow {
+    background-color: rgba(0, 0, 0, 0.60);
+}
+}
+
+.main-content.quality.design:after {
+  content: "";
+  background-image: url(https://image.freepik.com/free-vector/abstract-gear-wheel-mechanism-background_41981-300.jpg);
+  background-position: center bottom;
+  position: fixed;
+  bottom: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity: 0.15;
 }
