--- a/src/components/OilGas/style.scss
+++ b/src/components/OilGas/style.scss
@@ -1,3 +1,6 @@
+
+
+
 .mainC {
   .main-content {
     margin-top: 97px;
@@ -5,7 +8,7 @@
       .header-content {
         padding: 5px 0px;
       }
-      background-image: url(https://intersica.com/wp-content/uploads/2019/07/inspector-phone-1.jpg);
+      background-image: url(https://www.evaluationz.com/wp-content/uploads/2013/01/services-banner.jpg);
       background-position: center;
       -webkit-background-size: 100%;
       -webkit-background-size: cover;
@@ -27,18 +30,24 @@
       }
     }
     .description {
-      padding: 54px 0;
+      padding: 15px 0;
       &__row {
-        padding: 27px 0;
+        padding: 15px 0;
         display: flex;
+        flex-wrap: wrap;
+        &:nth-child(3){
+          padding-top: 25px;
+        }
 
         p {
           font-size: 13px;
+          padding: 0px 10px;
         }
         .testimonial {
           background-color: var(--mainActiveBacground);
           padding: 30px;
           position: relative;
+          width: 100%;
           &:after {
             position: absolute;
             z-index: 2;
@@ -72,17 +81,32 @@
           }
         }
         h3 {
-          font-size: 20px;
+          font-size: 16px;
+          margin-bottom: 0;
+          text-align: center;
+          padding: 15px 10px;
           color: var(--mainActiveBacground);
         }
         &__col2 {
-          width: 29.667%;
           margin-right: 5.5%;
+          min-width: 29.6%;
+          width: min-content;
+          display: flex;
+          flex-direction: column;
+          box-shadow: 0px 20px 70px 0px #262a4c26;
+          border-radius: 8px;
+          margin-bottom: 5.5%;
+          background-color: #f6f6f6;
+          &:nth-child(3),  &:nth-child(6)  {
+            margin-right: 0;
+          }
           :last-child {
             margin-right: 0;
           }
           img {
             width: 100%;
+            border-top-left-radius: 8px;
+            border-top-right-radius: 8px;
           }
         }
         .text-center {
@@ -96,4 +120,25 @@
   .main-content {
     margin-top: 0;
   }
+}
+
+.main-content.quality.design {
+  position: relative;
+  .addShadow {
+    background-color: rgba(0, 0, 0, 0.60);
+}
+}
+
+.main-content.quality.design:after {
+  content: "";
+  background-image: url(https://image.freepik.com/free-vector/abstract-gear-wheel-mechanism-background_41981-300.jpg);
+  background-position: center bottom;
+  position: fixed;
+  bottom: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity: 0.15;
 }
