--- a/src/components/Quality/style.scss
+++ b/src/components/Quality/style.scss
@@ -106,7 +106,7 @@
       .header-content {
         padding: 5px 0px;
       }
-      background-image: url(https://www.evaluationz.com/wp-content/uploads/2013/01/services-banner.jpg);
+      background-image: url(http://st2.depositphotos.com/1579454/9602/i/600/depositphotos_96020930-stock-photo-customer-service-concept.jpg);
       background-position: center;
       -webkit-background-size: 100%;
       -webkit-background-size: cover;
