--- a/src/components/Quality/style.css
+++ b/src/components/Quality/style.css
@@ -3,7 +3,7 @@
 }
 
 .mainC .main-content__top {
-  background-image: url(https://www.evaluationz.com/wp-content/uploads/2013/01/services-banner.jpg);
+  background-image: url(http://st2.depositphotos.com/1579454/9602/i/600/depositphotos_96020930-stock-photo-customer-service-concept.jpg);
   background-position: center;
   background-size: 100%;
   background-size: cover;
